[tool.poetry]
name = "mergify"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"
black = "^22.10.0"
pytest = "^7.2.0"
requests = "^2.28.1"
httpx = "^0.23.0"
requests-mock = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
